--- a/en-us/mkdocs.yml
+++ b/en-us/mkdocs.yml
@@ -206,8 +206,18 @@ theme:
     repo: fontawesome/brands/github
   language: en
   palette:
-    scheme: slate
-    primary: light blue
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      primary: blue
+      toggle:
+        icon: material/weather-sunny
+        name: Switch to Night
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      primary: light blue
+      toggle:
+        icon: material/weather-night
+        name: Switch to Light
 
 # MkDocs & Theme Extensions
 markdown_extensions:
